--- a/index.html
+++ b/index.html
@@ -424,13 +424,13 @@
                 <div class="lg:col-span-8 reveal">
                     <div class="display-container">
                         <div class="screen-mockup">
-                            <img src="/img/condição.png" 
+                            <img src="img/condição.png" 
                                  alt="Interface prescrevendo para condição clínica" id="img-prescricao" class="mockup-img active">
                             
-                            <img src="/img/monitoramento.png" 
+                            <img src="img/monitoramento.png" 
                                  alt="Monitoramento de pacientes" id="img-monitoramento" class="mockup-img">
 
-                            <img src="/img/prescrição.png" 
+                            <img src="img/prescrição.png" 
                                  alt="Branding" id="img-marca" class="mockup-img">
                         </div>
                     </div>
