images path fixed

--- a/index.html
+++ b/index.html
@@ -301,13 +301,13 @@
                     
                     <ul class="lang-options">
                         <li data-lang="en">
-                            <img src="/src/us.svg" alt="English" />
+                            <img src="src/us.svg" alt="English" />
                         </li>
                         <li data-lang="pt">
-                            <img src="/src/br.svg" alt="Português" />
+                            <img src="src/br.svg" alt="Português" />
                         </li>
                         <li data-lang="es">
-                            <img src="/src/es.svg" alt="Español" />
+                            <img src="src/es.svg" alt="Español" />
                         </li>
                     </ul>
                 </div>
