gemini ai text updates

--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
 
                     <div id="gemini-result" class="hidden">
                         <div class="prose prose-sm text-indigo-900/80 mb-6 leading-relaxed bg-white/60 p-6 rounded-xl border border-indigo-50">
-                            <p data-i18n="gemini.result">Cross-analysis indicates 94% synergy. MisoBio gains a direct prescription channel eliminating friction in the patient journey, while Canabinote technology provides Real World Evidence (RWE) data crucial for market expansion. We project a 27% increase in patient LTV (Lifetime Value).</p>
+                            <p data-i18n="gemini.result">By integrating Canabinote’s clinical ecosystem, Miso Bio can evolve from a high-volume hemp manufacturer into a sophisticated medical authority, leveraging your White Label Prescription Environment to offer B2B clients a turnkey digital platform for doctors. This partnership bridges the gap between Miso Bio’s massive production capacity and the end-patient by providing the Real-World Evidence and scientific legitimacy needed to overcome international trust barriers, ultimately transforming their raw materials into high-margin, data-backed clinical solutions that drive long-term prescriber loyalty.</p>
                         </div>
                         <div class="flex items-center justify-between">
                             <span class="text-[10px] font-bold uppercase tracking-wider text-indigo-400 flex items-center gap-1">
