--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                 <div class="pricing-card-primary text-white rounded-[2.5rem] p-10 flex flex-col shadow-2xl relative overflow-hidden">
                     <div class="absolute -top-10 -right-10 w-40 h-40 bg-primary-500 opacity-10 rounded-full blur-3xl"></div>
                     
-                    <div class="absolute top-6 right-6 bg-white/10 backdrop-blur-md border border-white/20 px-3 py-1 rounded-full text-[10px] font-bold uppercase tracking-wider flex items-center gap-1.5"><i data-lucide="sparkles" class="w-3 h-3"></i> <span data-i18n="investimento.card1.gemini_tag">Gemini Recommended</span></div>
+                    <div class="absolute top-6 right-6 bg-white/10 backdrop-blur-md border border-white/20 px-3 py-1 rounded-full text-[10px] font-bold uppercase tracking-wider flex items-center gap-1.5"><i data-lucide="sparkles" class="w-3 h-3"></i> <span data-i18n="investimento.card1.gemini_tag">MisoBio best pick</span></div>
 
                     <h3 data-i18n="investimento.card1.title" class="text-lg font-bold text-primary-500 mb-2">Plataforma White Label</h3>
                     <p data-i18n="investimento.card1.description" class="text-white/60 text-sm mb-10">Sistema de prescrição e recomendação completo.</p>
