--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
                 </div>
             </div>
 
-            <!-- Preview do Sistema -->
-            <div class="reveal mt-8 max-w-4xl mx-auto">
+        <!-- Preview do Sistema -->
+         <!--   <div class="reveal mt-8 max-w-4xl mx-auto">
                 <div class="glass-panel p-2 rounded-2xl shadow-2xl border border-white/60">
                     <div class="bg-white rounded-xl overflow-hidden border border-gray-100 aspect-[16/10] relative">
                          <div class="absolute inset-0 flex">
@@ -376,6 +376,15 @@
                     </div>
                 </div>
             </div>
+            -->
+
+            <!--image-->
+            <div class="reveal mt-8 max-w-4xl mx-auto">
+                <img src="img/hero.png" 
+                     alt="Interface da plataforma Canabinote em um notebook" class="w-full h-auto rounded-2xl shadow-2xl">
+
+            </div>
+
         </div>
     </section>
 
