--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
             // Monta e abre o link mailto
             const subject = "Contrato requisitado por MisoBio";
             const body = `Nome: ${name}\nE-mail: ${email}`;
-            window.location.href = `mailto:Para canabinote@canabinote.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
+            window.location.href = `mailto:canabinote@canabinote.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
 
             const originalText = btn.innerHTML;
             btn.innerHTML = 'Abrindo e-mail...';
