--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
             window.location.href = `mailto:canabinote@canabinote.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
 
             const originalText = btn.innerHTML;
-            btn.innerHTML = 'Abrindo e-mail...';
+            btn.innerHTML = '...';
             
             setTimeout(() => {
                 closeModal();
