--- a/index.html
+++ b/index.html
@@ -240,8 +240,9 @@
 <body class="bg-[#FAFAFA] text-[#1D1D1F] antialiased">
 
     <!-- Modal de Contrato -->
-    <div id="contract-modal" class="modal-overlay fixed inset-0 z-[100] flex items-center justify-center p-6">
-        <div class="modal-content bg-white w-full max-w-[480px] rounded-[2.5rem] p-10 shadow-2xl relative border border-gray-100">
+    <div id="contract-modal" class="modal-overlay fixed inset-0 z-[100] overflow-y-auto">
+        <div class="flex min-h-full items-center justify-center p-6">
+            <div class="modal-content bg-white w-full max-w-[480px] rounded-[2.5rem] p-10 shadow-2xl relative border border-gray-100">
             <button onclick="closeModal()" class="absolute top-6 right-6 p-2 text-gray-400 hover:text-gray-900 transition-colors">
                 <i data-lucide="x" class="w-6 h-6"></i>
             </button>
@@ -271,6 +272,7 @@
             <p class="text-[1rem] text-center text-appleGray-400 mt-6 leading-relaxed" data-i18n="modal.disclaimer">
                 By clicking, you agree to be contacted by the Canabinote team to complete commercial procedures.
             </p>
+            </div>
         </div>
     </div>
 
@@ -720,7 +722,8 @@
 
         // Close modal on overlay click
         modal.addEventListener('click', (e) => {
-            if (e.target === modal) closeModal();
+            const content = modal.querySelector('.modal-content');
+            if (!content.contains(e.target)) closeModal();
         });
 
         function handleFormSubmit(e) {
